add new components for generator and modify managament of person insertion